improve get_product_category_title DRY

--- a/view/component/products/product.html
+++ b/view/component/products/product.html
@@ -11,6 +11,15 @@
 									加入購物車
 								</a>
 							</div>
+							<div class="product-add-to-cart-mobile">
+								<a href="javascript:void(0)" onclick="orderitemCreate('{item_no}')">
+									<!-- cart by praveen patchu from the Noun Project -->
+									<picture>
+										<source srcset="resource/img/product/add_to_cart.webp" type="image/webp">
+										<img class="guide-icon" src="resource/img/product/add_to_cart.png">
+									</picture>
+								</a>
+							</div>
 						</div>
 						<div class="product-info">
 							<a class="product-link" href="index.php?route=single_product&itemno={item_no}">
