--- a/view/content/index.html
+++ b/view/content/index.html
@@ -1,5 +1,22 @@
 		<main>
-
+			<div class="main-wrap act-video-wrap">
+				<div class="act-video">
+					<h3 class="main-content-title">
+						客家電視台-三三吾鄉創業全記錄完整紀實
+					</h3>
+					<div class="act-video-iframe">
+						<iframe src="https://www.youtube-nocookie.com/embed/_Uvr2s6fJPU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="act-video">
+					<h3 class="main-content-title">
+						生命力新聞-三三吾鄉打皂溫暖故事
+					</h3>
+					<div class="act-video-iframe">
+						<iframe src="https://www.youtube-nocookie.com/embed/hSueVfABE6U?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
 			<div class="slogan-wrap">
 				<h3 class="slogan-title">三個故事 Tri Story</h3>
 				<p class="slogan">
