necessary data update

--- a/view/user_function/member_edit.html
+++ b/view/user_function/member_edit.html
@@ -16,7 +16,7 @@
                         <input type="phone" id="phone" value="[member_phone]">
                     </div>
                     <div class="sign-block">
-                        <label for="add">聯絡地址</label>
+                        <label for="add">聯絡地址（選填）</label>
                         <br>
                         <input type="text" id="address" value="[member_address]">
                     </div>
@@ -24,16 +24,6 @@
                         <label for="taxid">統一編號（選填）</label>
                         <br>
                         <input type="text" id="taxid" value="[member_taxid]">
-                    </div>
-                    <div class="sign-block">
-                        <label for="skintype">您的膚質</label>
-                        <select id="skintype">
-                            <option selected disabled>請選擇...</option>
-                            <option value="A">乾性</option>
-                            <option value="B">中性</option>
-                            <option value="C">油性</option>
-                            <option value="D">混和性</option>
-                        </select>
                     </div>
                     <div class="sign-block">
                         <label for="notice">備註（選填）</label>
