--- a/view/content/products.html
+++ b/view/content/products.html
@@ -1,5 +1,10 @@
 		<main>
 			<div class="main-wrap products-wrap">
+				<div id="category-guide">
+					<a class="guide-anchor" href="index.php?route=soap">單品</a>
+					<a class="guide-anchor" href="index.php?route=soapstring"> / 皂絲</a>
+					<a class="guide-anchor" href="index.php?route=gift_box"> / 禮盒</a>
+				</div>
 				<!-- Products -->
 				<div id="products"></div>
 			</div>
