--- a/view/component/products/product_category_title.html
+++ b/view/component/products/product_category_title.html
@@ -1,3 +1,5 @@
 				<h2 class="main-content-title">
-					{title}
+					<a class="product-link" href="index.php?route={route}">
+						{title}
+					</a>
 				</h2>
