data discount update

--- a/view/user_function/member_edit.html
+++ b/view/user_function/member_edit.html
@@ -16,7 +16,7 @@
                         <input type="phone" id="phone" value="[member_phone]">
                     </div>
                     <div class="sign-block">
-                        <label for="add">聯絡地址（選填）</label>
+                        <label for="address">聯絡地址（選填）</label>
                         <br>
                         <input type="text" id="address" value="[member_address]">
                     </div>
