view order page structure update

--- a/view/user_function/order_cus_view.html
+++ b/view/user_function/order_cus_view.html
@@ -1,29 +1,9 @@
         <main>
             <div class="sign-wrap">
                 <div class="sign text-center">
-                    <h2>查看訂單</h2>
-                    <div class="sign-block">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>訂單編號</th>
-                                    <th>發票編號</th>
-                                    <th>缺貨狀態</th>
-                                    <th>訂單狀態</th>
-                                    <th>付款狀態</th>
-                                    <th>付款方式</th>
-                                    <th>訂單總額</th>
-                                    <th>運費</th>
-                                    <th>實收金額</th>
-                                    <th>建立日期</th>
-                                    <th>操作</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            [cusOrderOperate]
-                            </tbody>
-                        </table>
-                    </div>
+                    <h2>您的訂單</h2>
+                    [orderContent]
+                    <hr class="text-sep-sm">
                     <div class="sign-block">
                         <p>目前全館滿777即可享臺灣本島免運費！</p>
                         <a class="promise-btn" href="index.php?route=products">繼續選購</a>
