--- a/view/nav.html
+++ b/view/nav.html
@@ -40,6 +40,29 @@
 								</a>
 							</li>
 							<li class="nav-dropdown-item">
+								<a class="nav-main-link" href="index.php?route=shopping_guide">
+									購物須知
+								</a>
+							</li>
+							<li class="nav-dropdown-item has-dropdown">
+								<a class="nav-main-link" href="javascript:void(0)">
+									異業合作
+									<span class="icon-angle-right"></span>
+								</a>
+								<ul class="nav-dropdown-submenu">
+									<li class="nav-dropdown-item">
+										<a class="nav-main-link" href="index.php?route=partner">
+											合作夥伴
+										</a>
+									</li>
+									<li class="nav-dropdown-item">
+										<a class="nav-main-link" href="index.php?route=media">
+											媒體報導
+										</a>
+									</li>
+								</ul>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=contact">
 									聯絡我們
 								</a>
@@ -56,41 +79,10 @@
 							試用品申請
 						</a>
 					</li>
-					<li class="nav-main-item has-dropdown">
-						<a class="nav-main-link" href="javascript:void(0)">
-							顧客專區
-							<span class="icon-angle-down"></span>
+					<li class="nav-main-item">
+						<a class="nav-main-link" href="index.php?route=customize">
+							客製化專區
 						</a>
-						<ul class="nav-dropdown-menu">
-							<li class="nav-dropdown-item">
-								<a class="nav-main-link" href="index.php?route=shopping_guide">
-									購物須知
-								</a>
-							</li>
-							<li class="nav-dropdown-item">
-								<a class="nav-main-link" href="index.php?route=customize">
-									客製化專區
-								</a>
-							</li>
-						</ul>
-					</li>
-					<li class="nav-main-item has-dropdown">
-						<a class="nav-main-link" href="javascript:void(0)">
-							異業合作
-							<span class="icon-angle-down"></span>
-						</a>
-						<ul class="nav-dropdown-menu">
-							<li class="nav-dropdown-item">
-								<a class="nav-main-link" href="index.php?route=partner">
-									合作夥伴
-								</a>
-							</li>
-							<li class="nav-dropdown-item">
-								<a class="nav-main-link" href="index.php?route=media">
-									媒體報導
-								</a>
-							</li>
-						</ul>
 					</li>
 					{login_status}
 				</ul>
