price calculation update

--- a/view/user_function/pay_content.html
+++ b/view/user_function/pay_content.html
@@ -17,6 +17,11 @@
                                     <td>[order_shipfee]</td>
                                 </tr>
                                 <tr>
+                                    <td>帳號內折扣</td>
+                                    <td colspan="2"></td>
+                                    <td>[order_message]</td>
+                                </tr>
+                                <tr>
                                     <td>折價券折扣</td>
                                     <td colspan="2"></td>
                                     <td>[order_discount]</td>
