--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -821,6 +821,11 @@ $buy-now-btn-width: 44%;
 	margin: 60px $wrap-lr-margin 0;
 }
 
+#contact-form .form-field {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
 #contact-form-name,
 #contact-form-email,
 #contact-form-phone,
@@ -912,7 +917,7 @@ $buy-now-btn-width: 44%;
 
 .guide-subtitle {
 	margin-bottom: 20px;
-	font-weight: 200;
+	font-weight: 300;
 	letter-spacing: 0.18em;
 }
 
@@ -1081,6 +1086,11 @@ $buy-now-btn-width: 44%;
 		border-radius: $product-add-to-cart-mobile-radius;
 		padding: 6px;
 		background-color: rgba(255, 255, 255, 0.6);
+
+		.cart-icon {
+			width: 24px;
+			height: auto;
+		}
 	}
 }
 
@@ -1132,30 +1142,40 @@ $buy-now-btn-width: 44%;
 	padding-top: 0;
 }
 
-#single-product-price,
-#purchase-amount,
-#single-product-purchase > .submit-btn {
+#single-product-desc .main-content-title,
+#single-product-desc #single-product-price {
 	display: inline-block;
-	vertical-align: middle;
-	margin: 10px 0;
+	margin: 0 0 13px;
 }
 
 #single-product-price {
-	margin: 0 20px;
 	color: $main-font-color;
 	font-weight: 200;
 	line-height: 1.5;
 	letter-spacing: 0.18em;
 }
 
-label[for="purchase-amount"] {
-	color: $main-font-color;
+#purchase-amount,
+#single-product-purchase > .add-to-cart-link {
+	display: inline-block;
+	vertical-align: middle;
+	margin: 13px 6px;
 }
 
 #purchase-amount {
 	min-width: 66px;
 	max-width: 120px;
 }
+
+#single-product-purchase > .add-to-cart-link .cart-icon {
+	width: 30px;
+	height: auto;
+}
+
+label[for="purchase-amount"] {
+	color: $main-font-color;
+}
+
 
 /* -------------------------------------------------------------------------
  * 11. 客製化專區｜Customize
