fix cart icon class

--- a/view/component/products/product.html
+++ b/view/component/products/product.html
@@ -16,7 +16,7 @@
 									<!-- cart by praveen patchu from the Noun Project -->
 									<picture>
 										<source srcset="resource/img/product/add_to_cart.webp" type="image/webp">
-										<img class="guide-icon" src="resource/img/product/add_to_cart.png">
+										<img class="cart-icon" src="resource/img/product/add_to_cart.png" alt="加入購物車">
 									</picture>
 								</a>
 							</div>
