--- a/view/content/single_product.html
+++ b/view/content/single_product.html
@@ -29,8 +29,7 @@
 					<hr class="text-sep-sm">
 					<p class="main-content-text">{ingredients}</p>
 					<p class="main-content-text">{skin_type}</p>
-					<div id="single-product-accordion"></div>
-					<hr class="text-sep-sm">
 				</div>
 			</div>
+			{landing_page}
 		</main>
