set add-to-cart icon to svg/png

--- a/view/component/products/product.html
+++ b/view/component/products/product.html
@@ -8,14 +8,9 @@
 							</a>
 							<div class="product-add-to-cart">
 								<a href="javascript:void(0)" onclick="orderitemCreate('{item_no}')">
-									加入購物車
-								</a>
-							</div>
-							<div class="product-add-to-cart-mobile">
-								<a href="javascript:void(0)" onclick="orderitemCreate('{item_no}')">
 									<!-- cart by praveen patchu from the Noun Project -->
 									<picture>
-										<source srcset="resource/img/product/add_to_cart.webp" type="image/webp">
+										<source srcset="resource/img/product/add_to_cart.svg" type="image/svg+xml">
 										<img class="cart-icon" src="resource/img/product/add_to_cart.png" alt="加入購物車">
 									</picture>
 								</a>
