--- a/view/content/single_product.html
+++ b/view/content/single_product.html
@@ -20,7 +20,7 @@
 						<a class="add-to-cart-link" href="javascript:void(0)" onclick="orderitemCreate('{item_no}')">
 							<!-- cart by praveen patchu from the Noun Project -->
 							<picture>
-								<source srcset="resource/img/product/add_to_cart.webp" type="image/webp">
+								<source srcset="resource/img/product/add_to_cart.svg" type="image/svg+xml">
 								<img class="cart-icon" src="resource/img/product/add_to_cart.png" alt="加入購物車">
 							</picture>
 						</a>
