fix signup & order create

--- a/view/user_function/member_adddata.html
+++ b/view/user_function/member_adddata.html
@@ -6,9 +6,7 @@
                         <p>電子信箱：[member_email]</p>
                     </div>
                     <div class="sign-block">
-                        <label for="name">您的姓名</label>
-                        <br>
-                        <input type="text" id="name" value="[member_name]">
+                    	<p>您的姓名：[member_name]</p>
                     </div>
                     <div class="sign-block">
                         <label for="birth">生日 ex.(2000-03-03)</label>
@@ -19,7 +17,7 @@
                         <label for="sex">性別</label>
                         <br>
                         <select id="sex">
-                            <option selected disabled value=""></option>
+                            <option selected disabled value="請選擇"></option>
                             <option value="M">男</option>
                             <option value="F">女</option>
                         </select>
@@ -28,7 +26,7 @@
                         <label for="skintype">膚質</label>
                         <br>
                         <select id="skintype">
-                            <option selected disabled value=""></option>
+                            <option selected disabled value="請選擇"></option>
                             <option value="A">乾性</option>
                             <option value="B">中性</option>
                             <option value="C">油性</option>
@@ -39,7 +37,7 @@
                         <label for="knowtype">如何認識三三</label>
                         <br>
                         <select id="knowtype">
-                            <option selected disabled value=""></option>
+                            <option selected disabled value="請選擇"></option>
                             <option value="A">粉絲專頁</option>
                             <option value="B">親友介紹</option>
                             <option value="C">媒體宣傳</option>
