--- a/view/user_function/member_edit.html
+++ b/view/user_function/member_edit.html
@@ -11,7 +11,7 @@
                         <input type="text" id="name" value="[member_name]">
                     </div>
                     <div class="sign-block">
-                        <label for="phone">聯絡電話</label>
+                        <label for="phone">聯絡電話（選填）</label>
                         <br>
                         <input type="phone" id="phone" value="[member_phone]">
                     </div>
