set shopping_guide icons to svg/png

--- a/view/content/shopping_guide.html
+++ b/view/content/shopping_guide.html
@@ -17,7 +17,7 @@
 						如何購買
 						<!-- cash by Shmidt Sergey from the Noun Project -->
 						<picture>
-							<source srcset="resource/img/guide/cash.webp" type="image/webp">
+							<source srcset="resource/img/guide/cash.svg" type="image/svg+xml">
 							<img class="guide-icon" src="resource/img/guide/cash.png">
 						</picture>
 					</h3>
@@ -25,7 +25,7 @@
 						電話購買
 						<!-- Phone by Icons Bazaar from the Noun Project -->
 						<picture>
-							<source srcset="resource/img/guide/phone.webp" type="image/webp">
+							<source srcset="resource/img/guide/phone.svg" type="image/svg+xml">
 							<img class="guide-icon" src="resource/img/guide/phone.png">
 						</picture>
 					</h5>
@@ -45,7 +45,7 @@
 						網路購物
 						<!-- Browser by Sergey Demushkin from the Noun Project -->
 						<picture>
-							<source srcset="resource/img/guide/web.webp" type="image/webp">
+							<source srcset="resource/img/guide/web.svg" type="image/svg+xml">
 							<img class="guide-icon" src="resource/img/guide/web.png">
 						</picture>
 					</h5>
@@ -74,7 +74,7 @@
 						付款說明
 						<!-- Wallet by anbileru adaleru from the Noun Project -->
 						<picture>
-							<source srcset="resource/img/guide/wallet.webp" type="image/webp">
+							<source srcset="resource/img/guide/wallet.svg" type="image/svg+xml">
 							<img class="guide-icon" src="resource/img/guide/wallet.png">
 						</picture>
 					</h3>
@@ -104,7 +104,7 @@
 						發票說明
 						<!-- Dollar Invoice by Stock Image Folio from the Noun Project -->
 						<picture>
-							<source srcset="resource/img/guide/invoice.webp" type="image/webp">
+							<source srcset="resource/img/guide/invoice.svg" type="image/svg+xml">
 							<img class="guide-icon" src="resource/img/guide/invoice.png">
 						</picture>
 					</h3>
@@ -118,7 +118,7 @@
 						退換貨說明
 						<!-- Package box return by arloenl evinniev from the Noun Project -->
 						<picture>
-							<source srcset="resource/img/guide/return.webp" type="image/webp">
+							<source srcset="resource/img/guide/return.svg" type="image/svg+xml">
 							<img class="guide-icon" src="resource/img/guide/return.png">
 						</picture>
 					</h3>
@@ -142,7 +142,7 @@
 						配送說明
 						<!-- package accept by unlimicon from the Noun Project -->
 						<picture>
-							<source srcset="resource/img/guide/delivery.webp" type="image/webp">
+							<source srcset="resource/img/guide/delivery.svg" type="image/svg+xml">
 							<img class="guide-icon" src="resource/img/guide/delivery.png">
 						</picture>
 					</h3>
