fix signup & order create

--- a/view/user_function/member_adddata.html
+++ b/view/user_function/member_adddata.html
@@ -9,6 +9,11 @@
                     	<p>您的姓名：[member_name]</p>
                     </div>
                     <div class="sign-block">
+                        <label for="phone">聯絡電話</label>
+                        <br>
+                        <input type="text" id="phone" value="[member_phone]">
+                    </div>
+                    <div class="sign-block">
                         <label for="birth">生日 ex.(2000-03-03)</label>
                         <br>
                         <input type="text" id="birth">
