fix promise-btn to <a> tag

--- a/view/manage_ui/manager_delete.html
+++ b/view/manage_ui/manager_delete.html
@@ -7,7 +7,7 @@
                         <input type="email" id="target" class="form-field">
                     </div>
                     <div>
-                        <button class="promise-btn" onclick="managerDelete()">確定</button>
+                        <a class="promise-btn" href="javascript:void(0)" onclick="managerDelete()">確定</a>
                         <a class="neural-btn" href="index.php?route=manager">取消</a>
                     </div>
                 </div>
