--- a/view/manage_ui/discount_create.html
+++ b/view/manage_ui/discount_create.html
@@ -18,7 +18,7 @@
                         </select>
                     </div>
                     <div>
-                        <button class="promise-btn" onclick="discountCreate()">確定</button>
+                        <a class="promise-btn" href="javascript:void(0)" onclick="discountCreate()">確定</a>
                         <a class="neural-btn" href="index.php?route=discount">取消</a>
                     </div>
                 </div>
