--- a/view/manage_ui/discount_delete.html
+++ b/view/manage_ui/discount_delete.html
@@ -7,7 +7,7 @@
 			            <input type="text" id="index">
 			        </div>
 			        <div>
-			        	<button class="promise-btn" onclick="discountDelete()">確定</button>
+			        	<a class="promise-btn" href="javascript:void(0)" onclick="discountDelete()">確定</a>
 	    		        <a class="neural-btn" href="index.php?route=discount">取消</a>
 			        </div>
 	        </div>
