--- a/view/manage_ui/item_edit.html
+++ b/view/manage_ui/item_edit.html
@@ -46,7 +46,7 @@
                         <input type="text" id="description" class="form-field">
                     </div>
                     <div>
-                        <button class="promise-btn" onclick="itemEdit()">確定</button>
+                        <a class="promise-btn" href="javascript:void(0)" onclick="itemEdit()">確定</a>
                         <a class="neural-btn" href="index.php?route=item">取消</a>
                     </div>
                 </div>
