--- a/view/manage_ui/item_offshelf.html
+++ b/view/manage_ui/item_offshelf.html
@@ -30,7 +30,7 @@
                         </select>
                     </div>
                     <div>
-                        <button class="promise-btn" onclick="itemOffshelf()">確定</button>
+                        <a class="promise-btn" href="javascript:void(0)" onclick="itemOffshelf()">確定</a>
                         <a class="neural-btn" href="index.php?route=item">取消</a>
                     </div>
                 </div>
