--- a/view/manage_ui/item_sell.html
+++ b/view/manage_ui/item_sell.html
@@ -34,7 +34,7 @@
                         <input type="number" id="amount" class="form-field">
                     </div>
                     <div>
-                        <button class="promise-btn" onclick="itemSell()">確定</button>
+                        <a class="promise-btn" href="javascript:void(0)" onclick="itemSell()">確定</a>
                         <a class="neural-btn" href="index.php?route=item">取消</a>
                     </div>
                 </div>
