--- a/view/manage_ui/order_create.html
+++ b/view/manage_ui/order_create.html
@@ -61,7 +61,7 @@
 						<textarea id="notice" rows="3" placeholder="訂單特殊要求"></textarea>
 					</div>
 					<div>
-						<button class="promise-btn" onclick="orderCreate()">確定</button>
+						<a class="promise-btn" href="javascript:void(0)" onclick="orderCreate()">確定</a>
 						<a class="neural-btn" href="index.php">取消</a>
 					</div>
 				</div>
