--- a/view/content/contact.html
+++ b/view/content/contact.html
@@ -10,11 +10,11 @@
 			<div id="contact">
 				<div id="contact-map"></div>
 				<div id="contact-form">
-					<input type="text" id="contact-form-name" class="form-field" placeholder="您的姓名" required>
-					<input type="email" id="contact-form-email" class="form-field" placeholder="信箱" required>
-					<input type="phone" id="contact-form-phone" class="form-field" placeholder="電話">
-					<textarea id="contact-form-message" class="form-field" name="message" rows="2" placeholder="訊息"></textarea>
-					<a class="submit-btn" href="#">
+					<input type="text" id="contact_name" class="form-field" placeholder="您的姓名" required>
+					<input type="email" id="contact_email" class="form-field" placeholder="信箱" required>
+					<input type="phone" id="contact_phone" class="form-field" placeholder="電話">
+					<textarea id="contact_message" class="form-field" name="message" rows="2" placeholder="訊息"></textarea>
+					<a class="submit-btn" onclick="contactMe()">
 						確認送出
 					</a>
 					<!-- <input class="submit-btn" type="submit" value="確認送出"> -->
