fix logInFirst redirection

--- a/view/user_function/member_signin.html
+++ b/view/user_function/member_signin.html
@@ -15,6 +15,7 @@
                         <input type="password" id="password">
                     </div>
                     <div class="sign-block">
+                        <input type="hidden" id="origin" value="[origin]">
                         <a class="promise-btn" href="javascript:void(0)" onclick="memberSignin()">登入</a>
                         <a class="promise-btn" href="index.php?route=member&in=signup">立即註冊</a>
                     </div>
