fix logInFirst redirection

--- a/view/user_function/discount_apply.html
+++ b/view/user_function/discount_apply.html
@@ -8,7 +8,7 @@
                         <input type="text" id="index">
                     </div>
                     <div class="sign-block">
-                        <a class="promise-btn" href="javascript:void(0)" onclick="discountApply()">登入</a>
+                        <a class="promise-btn" href="javascript:void(0)" onclick="discountApply()">使用</a>
                         <a class="neural-btn" href="javascript:void(0)" onclick="history.back()">取消</a>
                     </div>
                 </div>
