fix order detail view

--- a/view/manage_ui/order.html
+++ b/view/manage_ui/order.html
@@ -21,11 +21,11 @@
                         <thead>
                             <tr>
                                 <th>訂單編號</th>
-                                <th>發票編號</th>
+                                <th>顧客信箱</th>
                                 <th>缺貨狀態</th>
                                 <th>訂單狀態</th>
-                                <th>付款狀態</th>
-                                <th>訂單總額</th>
+                                <th>付款方式</th>
+                                <th>訂單金額</th>
                                 <th>運費</th>
                                 <th>實收金額</th>
                                 <th>建立日期</th>
